<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_control</name>
  <version>0.0.0</version>
  <description>moveit target pose control</description>
  <maintainer email="tyjun0528@gmail.com">ros2humble</maintainer>
  <license>BSD-3-Clause</license>

    <!-- ROS2 Python client library -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- Message types -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>shape_msgs</depend>

  

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_servo</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_components</depend>

  <!-- TF2 related -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
